# Basic_programming_in_CPP

./: .gitignore  TokenNetology.txt
Course_paper/Racing-simulator/: Racing-simulator.sln
Course_paper/Racing-simulator/Racing-dynamic-library/: Air-transport.cpp  Air-transport.h  All-terrain-boots.cpp  All-terrain-boots.h  Broomstick.cpp  Broomstick.h  Camel-fast.cpp  Camel-fast.h  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  Ground-transport.cpp  Ground-transport.h  Magic-carpet.cpp  Magic-carpet.h  Racing-dynamic-library.vcxproj  Racing-dynamic-library.vcxproj.filters  Racing.cpp  Racing.h  Transport.cpp  Transport.h  cpp.hint
Course_paper/Racing-simulator/Start-of-the-simulation/: Start-of-the-simulation.vcxproj  main.cpp
Lesson 1/Task 1/Task1/: Task1.sln
Lesson10/Task1/TheSimplestProject/: CMakeLists.txt  Source.cpp
Lesson10/Task2/The_project_is_more_complicated/: CMakeLists.txt  ClassHierarchy.cpp  EquilateralTriangle.cpp  Figure.cpp  Figure.h  IsoscelesTriangle.cpp  Parallelogram.h  Rectangle.h  Rhombus.cpp  RightTriangle.cpp  RightTriangle.h  Triangle.h
Lesson11/Task1/StaticLibrary/: StaticLibrary.sln
Lesson11/Task2/Dynamic/: Dynamic.sln
Lesson11/Task2/Dynamic_Library/: Dynamic_Library.sln
Lesson2/Task1/Months/: Months.cpp  Months.sln
Lesson2/Task2/Accounts/: Accounts.sln
Lesson2/Task3/StructureOutput/: StructureOutput.sln
Lesson3/Task1/CalculatorForTwoNumbers/: CalculatorForTwoNumbers.cpp  CalculatorForTwoNumbers.sln
Lesson3/Task2/Counter/: Counter.cpp  Counter.sln
Lesson4/Task1/Addresses/: addresses.cpp  out.txt
(+358 files in other folders)
